unpackaged/main/default/objects/n2de__Migration__c/n2de__Migration__c.object-meta.xml
<CustomObject>
    <label>Migration</label>
    <nameField>
        <label>Migration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>