unpackaged/main/default/objects/n2de__Migration__c/fields/n2de__Completed_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__Completed_date__c</fullName>
    <label>Completed date</label>
    <type>DateTime</type>
</CustomField>