unpackaged/main/default/objects/n2de__Migration__c/fields/n2de__Data_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Data_type__c</fullName>
    <description>SObject type of the parent object(s) in this migration.</description>
    <label>Data type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>