unpackaged/main/default/objects/n2de__Migration__c/fields/n2de__Error_message__c.field-meta.xml
<CustomField>
    <fullName>n2de__Error_message__c</fullName>
    <label>Error message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>