unpackaged/main/default/objects/n2de__Migration__c/fields/n2de__Object_ids__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_ids__c</fullName>
    <description>List of IDs of the parent objects included in this migration.</description>
    <label>Object IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>