unpackaged/main/default/objects/n2de__Migration__c/fields/n2de__Type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Type__c</fullName>
    <label>Migration type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>